django_project/frontend/src/app/app-mobile.scss
/**
* GeoSight is UNICEF's geospatial web-based business intelligence platform.
*
* Contact : geosight-no-reply@unicef.org
*
* .. note:: This program is free software; you can redistribute it and/or modify
*     it under the terms of the GNU Affero General Public License as published by
*     the Free Software Foundation; either version 3 of the License, or
*     (at your option) any later version.
*
* __author__ = 'irwan@kartoza.com'
* __date__ = '14/08/2025'
* __copyright__ = ('Copyright 2023, Unicef')
*/
:root {
  --mobile-bottom-nav-height: 24px;
}

@media (min-width: 1300px) {
  .DashboardMap {
    .Toolbar {
      .Toolbar-Middle {
        position: absolute;
        left: 50%;
        margin-left: -100px;
        top: 9px;
        width: 200px;
      }
    }
  }
}

@media (max-width: 1300px) {
  .DashboardMap {
    .Toolbar {
      .Toolbar-Middle {
        position: unset;
      }
    }

    .CurrentDate {
      display: none;
    }

    .SearchEntityOption {
      width: 175px;
    }
  }
}

@media (min-width: 1000px) {
  .MobileBottomNav {
    display: none;
  }
  .Mobile {
    display: none !important;
  }
}

@media (max-width: 1000px) {
  .EntitySearchEnable {
    .ReferenceLayerToolbar {
      position: absolute !important;
      top: 90px !important;
      left: 10px;
    }

    .DashboardMiddlePanel {
      padding-top: 80px !important;
    }
  }
  .EntitySearchDisable {
    .ReferenceLayerToolbar {
      position: absolute !important;
      top: 50px !important;
      left: 10px;
    }

    .DashboardMiddlePanel {
      padding-top: 40px !important;
    }
  }
  .no-select {
    user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    -webkit-tap-highlight-color: transparent;
  }
  .ToolbarMobileBottom {
    margin-top: -2px;
    border-top: 2px solid white;
    border-bottom: 1px solid var(--border-gray);
  }
  .ProjectOverview-Toolbar {
    margin-top: 3rem;
  }
  .LegendToggler {
    position: absolute;
    bottom: 1rem;
    right: 4rem;
    box-shadow: var(--box-shadow);
    width: 29px !important;
    height: 29px !important;
    background-color: var(--white) !important;
    cursor: pointer;
    pointer-events: auto;

    .ToolbarChild {
      height: 100%;
      width: 100%;
      display: flex;
      align-items: center;
      justify-content: center;

      a {
        height: 100%;
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
      }

      svg {
        width: 18px;
        height: 13px;
      }
    }
  }
  .MapLegendOpen .MapLegendContent {
    display: block !important;
  }
  .Toolbar-Left {
    .ProjectOverview-Toolbar {
      a {
        margin: 0 !important;
        padding: 6px !important;
        line-height: unset !important;
      }
    }
  }
  .DashboardMiddlePanel .TopContent .MiddleContent {
    flex-grow: 1;
  }
  .DashboardMiddlePanel .TopContent .LeftContent {
    width: 0;
    flex-grow: unset !important;
  }
  .MapLegend {
    position: absolute !important;
    bottom: 4rem;
    right: 10px;
    max-height: 75%;

    .MapLegendSection {
      margin-bottom: 0 !important;
      margin-top: 0.5rem;
    }
  }
  .DataLoadingProgress {
    margin-top: 79px !important;
  }
  .DashboardMap .Toolbar {
    padding: 0.5rem !important;
    height: auto !important;
    min-height: 40px !important;
    justify-content: center !important;
    align-items: start !important;

    & > div {
      padding: 0 !important;
    }

    .Toolbar-Middle {
      flex-grow: unset !important;
    }
  }
  .SearchGeometryInputComponent {
    position: absolute !important;
    top: 40px;
    width: 100% !important;
    box-sizing: border-box;
    left: 0;
    padding: 0 1rem !important;
  }
  .SearchEntityOption {
    width: 100% !important;
    margin: 0 !important;
    height: 30px !important;

    .MuiAutocomplete-input {
      padding: 0 !important;
      min-height: 30px !important;
      height: 30px !important;
      background-color: unset !important;
    }
  }
  .PopupToolbarIcon {
    position: unset !important;

    .PopupToolbarComponent {
      width: 100vw !important;
      margin-left: 0 !important;
      left: 0 !important;

      &::after {
        display: none !important;
      }
    }
  }
  .ReferenceLayerToolbar {
    .ReferenceLayerLevelSelector {
      background-color: white !important;
    }
  }
  .modal--box {
    min-width: unset !important;
  }
  .MuiAutocomplete-popper .MuiAutocomplete-option,
  .MuiPopover-root .MuiMenuItem-root {
    min-height: unset !important;
  }
  .maplibregl-ctrl-bottom-right {
    right: 0 !important;
  }
  .DashboardMiddlePanel .BottomContent {
    height: 0 !important;
    width: 100vw !important;

    .Separator {
      display: none;
    }

    .RightSection {
      position: absolute;
      bottom: 1rem;
      right: 1rem;
      padding: 0 !important;

      .FullScreen {
        display: block !important;
        width: 29px !important;
        height: 29px !important;
        box-shadow: var(--box-shadow);
        border: unset !important;
      }
    }
  }
  .DashboardMiddlePanel .BottomContent.DateOpen {
    height: 140px !important;
  }
  .GlobalDateSelectionWrapper {
    margin-left: 0 !important;
    width: 100% !important;
  }
  .Fullscreen {
    display: none !important;;
  }
  .MobileBottomNav {
    display: flex;
  }
  .DashboardMiddlePanel,
  .dashboard__left_side {
    padding-bottom: var(--mobile-bottom-nav-height);
  }
  .dashboard__left_side {
    width: 0 !important;
  }
  .layers-tab #simple-tabpanel-0,
  .layers-tab #simple-tabpanel-1,
  .filters-tab-content,
  .DashboardMiddlePanel .RightContent {
    display: block !important;;
    position: fixed !important;;
    left: 100vw;;
    top: 0 !important;;
    height: 100vh !important;;
    padding-top: var(--nav-header-height) !important;;
    padding-bottom: var(--mobile-bottom-nav-height) !important;;
    width: 100vw !important;;
    transition: left 0.2s !important;
  }
  .DashboardMiddlePanel .TopContent {
    z-index: unset !important;
    position: relative;
  }
  .maplibregl-ctrl-bottom-right {
    display: none;
  }
  .DashboardMiddlePanel .RightContent {
    background-color: white !important;
    margin: 0 !important;
    z-index: 1000;

    section {
      width: 100% !important;
      margin-top: 0 !important;
    }
  }

  html {
    &.Mobile_Context_Layers {
      .layers-tab {
        #simple-tabpanel-0 {
          left: 0;
        }
      }
    }

    &.Mobile_Indicators {
      .layers-tab {
        #simple-tabpanel-1 {
          left: 0;
        }
      }
    }

    &.Mobile_Filter {
      .filters-tab-content {
        left: 0;
      }
    }

    &.Mobile_Widget {
      .DashboardMiddlePanel .RightContent {
        left: 0;
      }
    }
  }
  .IndicatorLayerMiddleConfig .WhereConfigurationWrapper {
    max-width: 100vw !important;
  }

  .ToolbarMobileBottom {
    height: 43px;
    background-color: white;
  }


  .Home div.banner {
    height: fit-content !important;
  }
  .Home div.banner.Hide {
    height: 0 !important;
  }
  .Home div.banner .ShowBanner {
    top: 1rem !important;
    bottom: unset !important;
  }

  .BannerContent {
    padding: 0 3rem !important;
    height: fit-content !important;
  }
  .input-container {
    padding-right: 0 !important;
  }

  .HomePageContent {
    .project-grid-container {
      display: block !important;
      overflow: visible;
      max-height: unset !important;
      padding: 0 !important;

      .MuiGrid-item {
        max-width: unset !important;
      }
    }
  }
  footer {
    display: none;
  }
  .preview,
  .maplibregl-popup-content {
    .content {
      max-height: 250px;

      table {
        td {
          max-width: 150px;
        }
      }
    }
  }
}

.maplibregl-popup {
  max-width: 90vw !important;
}

